fix: confirmation alert style

--- a/src/components/molecules/otherSignInOptions/OtherSignInOptions.module.scss
+++ b/src/components/molecules/otherSignInOptions/OtherSignInOptions.module.scss
@@ -71,22 +71,7 @@
   transition: all var(--transition);
   transition-property: transform, box-shadow;
 
-  &:not(:disabled) {
-    &:hover,
-    &:focus {
-      box-shadow: var(--shadow-focus);
-      transform: scale(1.05);
-    }
-  }
-
-  &:focus {
-    outline: none;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.5;
-  }
+  @include common.button-state;
 
   @include common.mediaquery('desktop') {
     border-radius: var(--radius-medium);
