--- a/src/components/atoms/buttons/button/Button.module.scss
+++ b/src/components/atoms/buttons/button/Button.module.scss
@@ -16,27 +16,9 @@
   transition: all var(--transition);
   transition-property: transform, box-shadow;
 
-  &:not(:disabled) {
-    &:hover {
-      transform: scale(1.05);
-    }
-
-    &:focus {
-      box-shadow: var(--shadow-focus);
-    }
-  }
-
-  &:focus {
-    outline: none;
-  }
-
-  &:disabled {
-    cursor: not-allowed;
-    opacity: 0.5;
-  }
+  @include common.button-state;
 
   @include common.mediaquery('desktop') {
-    border-radius: var(--radius-medium);
     padding: 0.5rem 0.9rem;
   }
 }
@@ -47,16 +29,5 @@
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
-  &:not(:disabled) {
-    &:focus,
-    &:hover {
-      transform: scale(1.05);
-      box-shadow: inset 0 0 0 2px var(--color-primary), var(--shadow-focus);
-    }
-  }
-
-  &:disabled {
-    background-color: transparent;
-    opacity: 0.6;
-  }
+  @include common.button-secondary-state;
 }
