--- a/src/components/atoms/buttons/signInButton/SignInButton.module.scss
+++ b/src/components/atoms/buttons/signInButton/SignInButton.module.scss
@@ -22,16 +22,7 @@
     text-transform: uppercase;
   }
 
-  &:focus {
-    outline: none;
-  }
-
-  &:hover,
-  &:focus {
-    transform: scale(1.05);
-    box-shadow: var(--shadow-focus);
-  }
-
+  @include common.button-state;
   @include common.mediaquery('desktop') {
     padding: 0.45rem 0.9rem;
     margin-left: 0.75rem;
