--- a/src/components/molecules/avatar/Avatar.module.scss
+++ b/src/components/molecules/avatar/Avatar.module.scss
@@ -5,7 +5,7 @@
   width: var(--avatar-size);
   height: var(--avatar-size);
   border-radius: 100%;
-  border: 3px solid var(--color-gray);
+  border: 2px solid var(--color-secondary);
   display: flex;
   justify-content: center;
   align-items: center;
