--- a/src/components/organisms/confirmationAlert/ConfirmationAlert.module.scss
+++ b/src/components/organisms/confirmationAlert/ConfirmationAlert.module.scss
@@ -4,10 +4,10 @@
   background-color: var(--bg-primary);
   border-radius: var(--radius-small);
   position: relative;
-  padding: 2.5rem 2rem;
+  padding: 2rem 0;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1.75rem;
   width: 85%;
 
   @include common.mediaquery('tablet') {
@@ -17,7 +17,7 @@
   @include common.mediaquery('desktop') {
     width: auto;
     gap: 2.5rem;
-    padding: 1.5rem 5rem;
+    padding: 2rem 5rem;
   }
 }
 
@@ -32,6 +32,12 @@
     width: var(--size);
     height: var(--size);
     color: var(--color-secondary);
+  }
+
+  @include common.mediaquery('desktop') {
+    > svg {
+      --size: 3rem;
+    }
   }
 }
 
