--- a/src/components/pages/chat/Chat.module.scss
+++ b/src/components/pages/chat/Chat.module.scss
@@ -15,9 +15,9 @@
   height: 100%;
 
   @include common.mediaquery('desktop') {
-    padding: 2rem 4rem;
-    padding-left: 9rem;
+    padding: 2rem 8rem;
     gap: 3rem;
+    margin: 0 auto;
   }
 }
 
