--- a/src/components/atoms/accountPost/AccountPost.module.scss
+++ b/src/components/atoms/accountPost/AccountPost.module.scss
@@ -33,6 +33,13 @@
   height: 100%;
   background-color: var(--bg-primary);
   object-fit: contain;
+  opacity: 1;
+  transition: opacity var(--transition);
+}
+
+.imageLoading {
+  position: absolute;
+  opacity: 0;
 }
 
 .overlay {
