feat: error states

--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -4,7 +4,7 @@
   @include common.mediaquery('desktop') {
     display: flex;
     flex-direction: column;
-    padding: 2rem 1rem;
+    padding: 2rem 0;
     margin-left: 5vw;
     width: var(--header-width);
     border-right: var(--border-gray);
