--- a/src/components/atoms/postPlaceholder/PostPlaceholder.module.scss
+++ b/src/components/atoms/postPlaceholder/PostPlaceholder.module.scss
@@ -7,6 +7,7 @@
 }
 
 .placeholder {
+  border: var(--border-gray);
   width: var(--post-width);
   border-radius: var(--radius-small);
   opacity: 0.5;
@@ -15,46 +16,29 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  padding-bottom: 1.5rem;
   height: 22rem;
 
   @include common.mediaquery('tablet') {
-    height: 35rem;
+    height: 30rem;
   }
 
   @include common.mediaquery('desktop') {
     border-radius: var(--radius-big);
-    height: 40rem;
+    height: 35rem;
   }
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  gap: 1.25rem;
-}
-
-.avatar {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 100%;
-  @extend %gradient;
-}
-
-.username {
-  width: 8rem;
-  height: 3rem;
-  border-radius: var(--radius-medium);
-  @extend %gradient;
 }
 
 .image {
   height: 60%;
   border-radius: var(--radius-medium);
   @extend %gradient;
+  margin: 0 0.5rem;
 }
 
 .footer {
-  height: calc(40% - 3rem);
+  height: calc(30% - 3rem);
   border-radius: var(--radius-medium);
   @extend %gradient;
+  margin: 0 0.5rem;
 }
