--- a/src/components/atoms/postPlaceholder/PostPlaceholder.module.scss
+++ b/src/components/atoms/postPlaceholder/PostPlaceholder.module.scss
@@ -15,7 +15,6 @@
   margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
   padding-bottom: 1.5rem;
   height: 22rem;
 
@@ -30,6 +29,7 @@
 }
 
 .image {
+  margin-top: 1.5rem;
   height: 60%;
   border-radius: var(--radius-medium);
   @extend %gradient;
@@ -41,4 +41,5 @@
   border-radius: var(--radius-medium);
   @extend %gradient;
   margin: 0 0.5rem;
+  margin-top: 1.5rem;
 }
