--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -33,7 +33,8 @@
   display: none;
 
   @include common.mediaquery('desktop') {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.75rem;
+    padding-right: 0.5rem;
     border-radius: var(--radius-big);
     display: flex;
     align-items: center;
