--- a/src/components/pages/chatRoom/ChatRoom.module.scss
+++ b/src/components/pages/chatRoom/ChatRoom.module.scss
@@ -96,9 +96,9 @@
 
 .formContainer {
   position: fixed;
-  bottom: 2.5rem;
+  bottom: 3.5rem;
   width: 100%;
-  padding: 1rem 1rem;
+  padding: 1rem 0.5rem;
   background-color: var(--bg-primary);
   display: flex;
   justify-content: stretch;
@@ -116,12 +116,13 @@
   align-items: center;
   justify-content: space-between;
   border-radius: var(--radius-big);
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   background-color: var(--bg-secondary);
-  border: none;
+  border: 1px solid var(--color-gray);
   width: 100%;
 
   @include common.mediaquery('desktop') {
+    padding: 0 1.5rem;
     gap: 2rem;
   }
 }
@@ -147,10 +148,6 @@
   flex-shrink: 0;
   transition: opacity var(--transition);
   padding: 0.3rem;
-
-  &:focus {
-    border-radius: 100%;
-  }
 
   &:disabled {
     opacity: 0.4;
