--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -33,13 +33,12 @@
   display: none;
 
   @include common.mediaquery('desktop') {
-    padding: 0.5rem 0.75rem;
-    padding-right: 0.5rem;
+    padding: 0.5rem;
     border-radius: var(--radius-big);
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 0.75rem;
+    gap: 0.5rem;
 
     transition: var(--transition);
   }
@@ -74,6 +73,7 @@
 .icon {
   flex-shrink: 0;
   margin-left: auto;
+  padding-left: 1rem;
 }
 
 .username {
