--- a/src/components/organisms/postModal/PostModal.module.scss
+++ b/src/components/organisms/postModal/PostModal.module.scss
@@ -12,7 +12,7 @@
   overflow-y: scroll;
   border-radius: var(--radius-small) var(--radius-small) 0 0;
   height: 31rem;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0.5rem;
 
   @include common.mobile-landscape {
     width: auto;
@@ -53,7 +53,7 @@
 
 .commentsContainer {
   margin-top: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
 
   @include common.mobile-landscape {
     grid-column: 2 / 3;
