--- a/src/components/organisms/statsModalItem/StatsModalItem.module.scss
+++ b/src/components/organisms/statsModalItem/StatsModalItem.module.scss
@@ -12,7 +12,7 @@
 .itemLink {
   display: flex;
   align-items: center;
-  padding: 0.4rem 1rem;
+  padding: 0.5rem;
   gap: 1rem;
   flex-grow: 1;
   border-radius: var(--radius-medium);
@@ -20,6 +20,10 @@
   &:hover,
   &:focus {
     background-color: var(--bg-secondary);
+  }
+
+  @include common.mediaquery('desktop') {
+    padding: 0.4rem 1rem;
   }
 }
 
