--- a/src/components/organisms/accountPosts/AccountPosts.module.scss
+++ b/src/components/organisms/accountPosts/AccountPosts.module.scss
@@ -7,6 +7,7 @@
   gap: 1.5rem;
   padding: 0 1.5rem;
   grid-template-columns: repeat(2, 1fr);
+  padding-bottom: 4rem;
 
   @include common.mobile-landscape {
     padding: 0 4rem;
@@ -22,6 +23,7 @@
   @include common.mediaquery('desktop') {
     gap: 3rem;
     padding: 0;
+    padding-bottom: 6rem;
     margin-top: 7rem;
     grid-template-columns: repeat(3, 1fr);
   }
