--- a/src/components/organisms/post/postHeader/PostHeader.module.scss
+++ b/src/components/organisms/post/postHeader/PostHeader.module.scss
@@ -2,11 +2,7 @@
 
 .header {
   display: flex;
-  padding: 1rem 0.5rem;
-
-  @include common.mediaquery('desktop') {
-    padding: 1rem 1rem;
-  }
+  margin-bottom: var(--post-margin);
 }
 
 .userAnchor {
@@ -14,6 +10,10 @@
   align-items: center;
   gap: 0.75rem;
   font-size: 0.8rem;
+
+  @include common.mediaquery('desktop') {
+    gap: 1rem;
+  }
 }
 
 .username {
