--- a/src/components/atoms/textArea/TextArea.module.scss
+++ b/src/components/atoms/textArea/TextArea.module.scss
@@ -1,36 +1,44 @@
 @use '/src/styles/common';
 
+.textAreaContainer {
+  position: relative;
+}
+
 .textArea {
-  border-radius: var(--radius-small);
   border: none;
   min-width: 100%;
   width: 100%;
+  height: 100%;
   resize: vertical;
-  min-height: 12rem;
-  height: 12rem;
+  min-height: 7rem;
+  max-height: 12rem;
   padding: 1rem;
-  background-color: transparent;
-  border: var(--border-primary);
-  transition: all var(--transition);
-  transition-property: background-color, box-shadow;
-  margin-top: 0.5rem;
+  border-radius: var(--radius-small);
   border: var(--border-gray);
-
-  &:hover,
-  &:focus {
-    background-color: var(--bg-secondary);
-  }
+  background-color: var(--bg-secondary);
 
   &:focus {
     outline: none;
-    box-shadow: var(--shadow-focus);
     border-color: var(--color-primary);
+
+    & + .label {
+      transform: translate(0.5rem, -0.75rem);
+      background-color: var(--bg-primary);
+    }
   }
 }
 
 .label {
   color: var(--text-secondary);
   text-transform: capitalize;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: all var(--transition);
+  transition-property: background-color, transform;
+  transform: translate(0.5rem, 1rem);
+  display: inline-block;
+  padding: 0 0.5rem;
 }
 
 .error {
