--- a/src/components/organisms/cropImage/CropImage.module.scss
+++ b/src/components/organisms/cropImage/CropImage.module.scss
@@ -10,32 +10,33 @@
   justify-content: center;
   align-items: center;
   border-radius: var(--radius-small);
-  box-shadow: var(--shadow-focus);
-  margin-top: 1rem;
+  border: var(--border-gray);
 
   @include common.mediaquery('desktop') {
     min-height: 25rem;
   }
 }
 
+.cropImage {
+  box-shadow: var(--shadow-focus);
+}
+
 .info {
   text-align: left;
-  font-size: 1.25rem;
-  margin-top: 2rem;
+  margin-top: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
+}
 
-  > svg {
-    flex-basis: 4rem;
-  }
+.saveOrAnotherImage {
+  margin-top: 1rem;
 }
 
 .buttons {
   display: flex;
   flex-direction: column;
-  margin-top: 3.5rem;
   gap: 1rem;
 
   @include common.mediaquery('desktop') {
