--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -4,10 +4,11 @@
   @include common.mediaquery('desktop') {
     display: flex;
     flex-direction: column;
-    padding: 2rem 0;
-    margin-left: 5vw;
+    padding-block: 2rem;
+    padding-left: 7rem;
+    padding-right: 1rem;
     width: var(--header-width);
-    border-right: var(--border-gray);
+    border-right: 1px solid var(--color-gray);
     position: fixed;
     top: 0;
     left: 0;
@@ -21,6 +22,7 @@
 
   @include common.mediaquery('desktop') {
     display: unset;
+    margin-left: 0.5rem;
   }
 }
 
@@ -34,6 +36,7 @@
 
   @include common.mediaquery('desktop') {
     padding: 0.5rem;
+    padding-right: 1rem;
     border-radius: var(--radius-big);
     display: flex;
     align-items: center;
@@ -73,7 +76,6 @@
 .icon {
   flex-shrink: 0;
   margin-left: auto;
-  padding-left: 1rem;
 }
 
 .username {
