--- a/src/components/organisms/homePost/HomePost.module.scss
+++ b/src/components/organisms/homePost/HomePost.module.scss
@@ -4,7 +4,6 @@
   width: var(--post-width);
 
   @include common.mediaquery('tablet') {
-    border: var(--border-gray);
-    border-radius: var(--radius-big);
+    border-radius: var(--radius-small);
   }
 }
