--- a/src/components/organisms/navButtons/NavButtons.module.scss
+++ b/src/components/organisms/navButtons/NavButtons.module.scss
@@ -37,7 +37,7 @@
   display: flex;
   align-items: center;
   border-radius: var(--radius-big);
-  gap: 0.75rem;
+  gap: 0.5rem;
   padding: 0.25rem;
   font-size: 1.25rem;
   transition: all var(--transition);
@@ -46,12 +46,12 @@
   svg {
     width: 1.5rem;
     height: 1.5rem;
-    stroke-width: 2;
+    stroke-width: 1.25;
   }
 
   @include common.mediaquery('desktop') {
     padding: 1rem;
-    padding-right: 1.5rem;
+    border-radius: var(--radius-medium);
 
     &:hover {
       background-color: var(--bg-secondary);
@@ -70,7 +70,7 @@
   font-weight: 700;
 
   svg {
-    stroke-width: 2.5;
+    stroke-width: 1.75;
   }
 
   @include common.mediaquery('desktop') {
