--- a/src/components/organisms/post/commentForm/CommentForm.module.scss
+++ b/src/components/organisms/post/commentForm/CommentForm.module.scss
@@ -4,15 +4,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 .commentInput {
   height: 2.5rem;
   min-height: 2.5rem;
   resize: vertical;
-  width: 80%;
-  border-radius: var(--radius-medium);
+  flex-grow: 1;
+  border-radius: var(--radius-small);
   padding: 0.5rem;
   border: var(--border-gray);
   transition: background-color var(--transition);
@@ -26,9 +26,5 @@
   &:focus {
     outline: none;
     box-shadow: var(--shadow-focus);
-  }
-
-  @include common.mediaquery('desktop') {
-    width: 80%;
   }
 }
