--- a/src/components/pages/chat/Chat.module.scss
+++ b/src/components/pages/chat/Chat.module.scss
@@ -1,22 +1,18 @@
 @use '/src/styles/common';
 
 .container {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
   gap: 1.5rem;
   background-color: var(--bg-primary);
   overflow-y: auto;
   padding: 1rem 1rem;
   padding-bottom: 3rem;
   z-index: 1;
-  width: 100%;
   height: 100%;
+  width: clamp(19rem, 70%, 45rem);
 
   @include common.mediaquery('desktop') {
-    padding: 2rem 8rem;
     gap: 3rem;
+    padding-top: 2rem;
     margin: 0 auto;
   }
 }
