--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,7 +15,7 @@
   --text-gray: rgb(61, 61, 61);
 
   --filter-blur: blur(13px) saturate(1.2);
-  --border-gray: 1px solid rgb(197, 197, 197);
+  --border-gray: 2px solid var(--color-gray);
 
   --bg-primary: rgb(255, 255, 255);
   --bg-blur: rgb(255, 255, 255, 0.9);
@@ -38,24 +38,27 @@
   --shadow-focus: 0 0 0 0.3rem var(--bg-primary),
     0 0 0 0.5rem var(--color-primary);
 
-  --radius-big: 0.95rem;
+  --radius-big: 1rem;
   --radius-medium: 0.5rem;
-  --radius-small: 0.35rem;
+  --radius-small: 0.25rem;
 
-  --header-width: 15.5rem;
+  --header-width: 22rem;
   --post-width: 20rem;
+
+  --post-margin: 1rem;
 
   @include common.mediaquery('tablet') {
     --post-width: calc(18rem + 15vw);
   }
 
   @include common.mediaquery('desktop') {
+    --post-margin: 1.5rem;
     --post-width: calc(18rem + 15vw);
   }
 }
 
 %variablesDarkTheme {
-  --color-overlay: rgba(87, 87, 87, 0.75);
+  --color-overlay: rgba(60, 60, 60, 0.8);
   --text-black: rgb(230, 230, 230);
   --color-gray: rgb(124, 124, 124);
   --gradient: linear-gradient(
@@ -65,9 +68,8 @@
     var(--color-gray) 20%
   );
   --text-gray: rgb(200, 200, 200);
-  --border-gray: 1px solid rgb(90, 90, 90);
   --bg-primary: rgb(32, 37, 51);
   --bg-blur: rgb(32, 37, 51, 0.9);
-  --bg-secondary: rgba(255, 255, 255, 0.2);
+  --bg-secondary: rgba(60, 60, 65);
   --bg-focus: rgb(80, 80, 80);
 }
