--- a/src/components/atoms/postHeaderPlaceholder/PostHeaderPlaceholder.module.scss
+++ b/src/components/atoms/postHeaderPlaceholder/PostHeaderPlaceholder.module.scss
@@ -9,20 +9,19 @@
 .placeholder {
   display: flex;
   align-items: center;
-  gap: 0.5rem;
-  padding: 0.5rem;
+  gap: 0.75rem;
+  margin-bottom: 1rem;
 
   @include common.mediaquery('desktop') {
-    padding: 0.75rem 1rem;
-    gap: 0.75rem;
+    gap: 1rem;
   }
 }
 
 .avatar {
   @extend %gradient;
 
-  border-radius: 100%;
-  --avatar-size-placeholder: 2.75rem;
+  border-radius: var(--radius-small);
+  --avatar-size-placeholder: 2.5rem;
   width: var(--avatar-size-placeholder);
   height: var(--avatar-size-placeholder);
 
@@ -34,7 +33,7 @@
 .name {
   @extend %gradient;
 
-  height: 2.25rem;
+  height: 2.5rem;
   width: 7rem;
   border-radius: var(--radius-small);
 }
@@ -43,7 +42,7 @@
   @extend %gradient;
 
   width: 4rem;
-  height: 2.25rem;
+  height: 2.5rem;
   border-radius: var(--radius-small);
   margin-left: auto;
 }
