--- a/src/components/atoms/postPlaceholder/PostPlaceholder.module.scss
+++ b/src/components/atoms/postPlaceholder/PostPlaceholder.module.scss
@@ -10,11 +10,8 @@
   width: var(--post-width);
   border-radius: var(--radius-small);
   opacity: 0.5;
-  margin: 0 auto;
-  margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
-  padding-bottom: 1.5rem;
   height: 22rem;
 
   @include common.mediaquery('tablet') {
@@ -28,17 +25,14 @@
 }
 
 .image {
-  margin-top: 1.5rem;
   height: 60%;
-  border-radius: var(--radius-medium);
+  border-radius: var(--radius-small);
   @extend %gradient;
-  margin: 0 0.5rem;
+  margin-bottom: var(--post-margin);
 }
 
 .footer {
-  height: calc(30% - 3rem);
-  border-radius: var(--radius-medium);
+  height: calc(30% - 5rem);
+  border-radius: var(--radius-small);
   @extend %gradient;
-  margin: 0 0.5rem;
-  margin-top: 1.5rem;
 }
