--- a/src/components/organisms/accountStats/AccountStats.module.scss
+++ b/src/components/organisms/accountStats/AccountStats.module.scss
@@ -6,7 +6,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   background-color: var(--bg-secondary);
-  border-radius: var(--radius-medium);
+  border-radius: var(--radius-small);
   padding: 0.5rem;
   width: clamp(10rem, 80vw, 40rem);
 
