--- a/src/components/organisms/navButtons/NavButtons.module.scss
+++ b/src/components/organisms/navButtons/NavButtons.module.scss
@@ -50,7 +50,7 @@
   }
 
   @include common.mediaquery('desktop') {
-    padding: 1rem;
+    padding: 0.75rem 0.6rem;
     border-radius: var(--radius-medium);
 
     &:hover {
