--- a/src/components/molecules/postArrows/PostArrows.module.scss
+++ b/src/components/molecules/postArrows/PostArrows.module.scss
@@ -15,10 +15,15 @@
   align-items: center;
   top: 0;
   bottom: 0;
-  left: 1rem;
+  left: 0.5rem;
   z-index: 2;
+  opacity: 0.7;
   box-shadow: var(--shadow-primary);
   transition: box-shadow var(--transition-fast);
+
+  @include common.mediaquery('desktop') {
+    left: 1rem;
+  }
 
   &:hover,
   &:focus {
@@ -26,12 +31,16 @@
     box-shadow: var(--shadow-focus);
   }
 
-  > svg {
+  >svg {
     stroke-width: 3;
   }
 }
 
 .buttonRight {
   left: unset;
-  right: 1rem;
+  right: 0.5rem;
+
+  @include common.mediaquery('desktop') {
+    right: 1rem;
+  }
 }
