--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -8,7 +8,7 @@
     padding-left: 7rem;
     padding-right: 1rem;
     width: var(--header-width);
-    border-right: 1px solid var(--color-gray);
+    border-right: var(--border-gray);
     position: fixed;
     top: 0;
     left: 0;
