--- a/src/components/organisms/header/Header.module.scss
+++ b/src/components/organisms/header/Header.module.scss
@@ -5,8 +5,8 @@
     display: flex;
     flex-direction: column;
     padding-block: 2rem;
-    padding-left: 7rem;
-    padding-right: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     width: var(--header-width);
     border-right: var(--border-gray);
     position: fixed;
@@ -22,7 +22,7 @@
 
   @include common.mediaquery('desktop') {
     display: unset;
-    margin-left: 0.5rem;
+    margin-left: 1rem;
   }
 }
 
@@ -36,14 +36,15 @@
 
   @include common.mediaquery('desktop') {
     padding: 0.5rem;
-    padding-right: 1rem;
-    border-radius: var(--radius-big);
+    border-radius: var(--radius-medium);
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    width: 100%;
+    justify-content: center;
     gap: 0.5rem;
-
-    transition: var(--transition);
+    margin: 0;
+    transition: all var(--transition);
+    transition-property: background-color, box-shadow;
   }
 
   &:hover,
