--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,10 +26,12 @@
   --transition: 0.25s ease;
   --transition-fast: 0.125s ease;
 
-  --gradient: linear-gradient(90deg,
-      var(--color-gray) 0px,
-      #ededed 20%,
-      var(--color-gray) 40%);
+  --gradient: linear-gradient(
+    90deg,
+    var(--color-gray) 0px,
+    #ededed 20%,
+    var(--color-gray) 40%
+  );
   --placeholder-animation: skeleton-loading 1.5s infinite linear;
   --placeholder-bg-size: 500%;
 
@@ -59,10 +61,12 @@
   --color-overlay: rgba(80, 80, 80, 0.85);
   --text-black: rgb(230, 230, 230);
   --color-gray: rgb(100, 100, 110);
-  --gradient: linear-gradient(90deg,
-      var(--color-gray) 0px,
-      #929292 10%,
-      var(--color-gray) 20%);
+  --gradient: linear-gradient(
+    90deg,
+    var(--color-gray) 0px,
+    #929292 10%,
+    var(--color-gray) 20%
+  );
   --text-gray: rgb(200, 200, 200);
   --bg-primary: rgb(32, 37, 51);
   --bg-blur: rgb(32, 37, 51, 0.9);
