--- a/src/components/molecules/postArrows/PostArrows.module.scss
+++ b/src/components/molecules/postArrows/PostArrows.module.scss
@@ -21,9 +21,6 @@
   box-shadow: var(--shadow-primary);
   transition: box-shadow var(--transition-fast);
 
-  @include common.mediaquery('desktop') {
-    left: 1rem;
-  }
 
   &:hover,
   &:focus {
@@ -31,8 +28,13 @@
     box-shadow: var(--shadow-focus);
   }
 
-  > svg {
+  >svg {
     stroke-width: 3;
+  }
+
+  @include common.mediaquery('desktop') {
+    left: 1rem;
+    opacity: 1;
   }
 }
 
