--- a/src/components/organisms/chatUsersList/ChatUsersList.module.scss
+++ b/src/components/organisms/chatUsersList/ChatUsersList.module.scss
@@ -72,9 +72,7 @@
   }
 }
 
-.loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
+
+.loading {
+  padding: 2rem 0;
 }
