--- a/src/components/organisms/listModal/ListModal.module.scss
+++ b/src/components/organisms/listModal/ListModal.module.scss
@@ -27,6 +27,7 @@
   text-align: center;
   padding: 1rem 2rem;
   border-radius: var(--radius-small) var(--radius-small) 0 0;
+  transition: background-color var(--transition-fast);
 
   @include common.mobile-landscape {
     padding: 0.75rem 2rem;
@@ -37,7 +38,7 @@
   font-weight: 700;
   overflow: hidden;
 
-  & > button,
+  &>button,
   a {
     transition: all var(--transition-fast);
     transition-property: background-color, transform;
