fix: design bugs

--- a/src/components/organisms/navButtons/NavButtons.module.scss
+++ b/src/components/organisms/navButtons/NavButtons.module.scss
@@ -8,8 +8,8 @@
   gap: 1.5rem;
   padding: 0.2rem 0.5rem;
   background-color: var(--bg-secondary);
-  border-radius: 4rem;
   border: 1px solid var(--color-gray);
+  border-radius: var(--radius-medium);
 
   @include common.mediaquery('desktop') {
     border-radius: 0;
