--- a/src/components/modals/list-modal/list-modal.module.scss
+++ b/src/components/modals/list-modal/list-modal.module.scss
@@ -1,82 +1,41 @@
 @use '/src/styles/common';
 
-.list {
-  list-style: none;
-}
-
-.headingContainer {
-  display: flex;
-}
-
 .container {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: var(--bg-primary);
+  width: clamp(20rem, 30vw, 40rem);
+  padding: 1rem 1.5rem;
+  border-radius: var(--radius-medium);
+}
+
+.focusLock {
   width: 100%;
+}
 
-  @include common.mobile-landscape {
-    width: 75%;
-  }
-
-  @include common.mediaquery('desktop') {
-    width: auto;
-    min-width: 40rem;
-  }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1.25rem;
 }
 
 .heading {
-  background-color: var(--bg-primary);
-  text-align: center;
-  padding: 1rem 2rem;
-  border-radius: var(--radius-small) var(--radius-small) 0 0;
-  transition: background-color var(--transition-fast);
-
-  @include common.mobile-landscape {
-    padding: 0.75rem 2rem;
-  }
+  font-size: 1.75rem;
+  max-width: 70%;
 }
 
-.listItem {
-  font-weight: 700;
-  overflow: hidden;
-
-  & > button,
-  a {
-    transition: all var(--transition-fast);
-    transition-property: background-color, transform;
-
-    &:hover {
-      background-color: var(--bg-focus);
-    }
-
-    &:focus {
-      outline: none;
-      background-color: var(--bg-focus);
-    }
-  }
-}
-
-.listItemLast {
-  @include common.mediaquery('desktop') {
-    border-radius: 0 0 var(--radius-small) var(--radius-small);
-  }
-}
-
-.item {
+.list {
+  list-style: none;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 1rem;
-  padding: 1rem 1.5rem;
-  border: 0;
-  background-color: var(--bg-primary);
-  width: 100%;
+  flex-direction: column;
+  gap: 1.5rem;
+
 
   @include common.mediaquery('desktop') {
-    padding: 1rem 2rem;
-    gap: 1.25rem;
-  }
-
-  @include common.mobile-landscape {
-    padding: 0.75rem 2rem;
+    gap: 0.5rem;
   }
 }
