--- a/src/components/avatar/avatar.module.scss
+++ b/src/components/avatar/avatar.module.scss
@@ -4,8 +4,7 @@
   --avatar-size: 2rem;
   width: var(--avatar-size);
   height: var(--avatar-size);
-  border-radius: var(--radius-medium);
-  border: var(--border-gray);
+  border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -50,7 +49,7 @@
   justify-content: center;
   align-items: center;
 
-  & > svg {
+  &>svg {
     width: 100%;
     height: 90%;
   }
