--- a/src/components/modals/list-modal-item/list-modal-item.module.scss
+++ b/src/components/modals/list-modal-item/list-modal-item.module.scss
@@ -8,11 +8,12 @@
     width: 100%;
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.75rem;
     border-radius: var(--radius-small);
 
     @include common.mediaquery('desktop') {
         padding: 1rem 0.5rem;
+        transition: background-color var(--transition);
 
         &:hover {
             background-color: var(--bg-focus);
