--- a/src/components/drop-zone/drop-zone.module.scss
+++ b/src/components/drop-zone/drop-zone.module.scss
@@ -15,9 +15,7 @@
   gap: 1rem;
   padding: 2rem 0;
 
-  & > * {
-    pointer-events: none;
-  }
+  &>* {}
 }
 
 .dropZoneState {
@@ -59,7 +57,6 @@
   transition: all var(--transition);
   transition-property: background-color, box-shadow, transform;
   z-index: 1;
-  pointer-events: all;
   border: 2px solid var(--color-primary);
   padding: 0.5rem 1rem;
 
@@ -74,11 +71,10 @@
   }
 }
 
-.input:focus ~ .buttonInput {
+.input:focus~.buttonInput {
   box-shadow: var(--shadow-focus);
 }
 
 .buttonInputDisabled {
   opacity: 0.5;
-  pointer-events: none;
 }
